Scrollbar indicator not visible on some sites with Firefox 89 / Proton
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox89 | --- | verified |
firefox90 | --- | verified |
firefox91 | --- | verified |
People
(Reporter: ccr, Assigned: emilio)
Details
(Keywords: regression)
Attachments
(5 files)
40.92 KB,
text/plain
|
Details | |
8.86 MB,
video/mp4
|
Details | |
48 bytes,
text/x-phabricator-request
|
Details | Review | |
48 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
pascalc
:
approval-mozilla-release+
|
Details | Review |
5.47 KB,
text/plain
|
Details |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:89.0) Gecko/20100101 Firefox/89.0
Steps to reproduce:
After upgrading from FF88 to 89 (stable build downloaded from Mozilla), the main scrollbar on some sites has no visible scroll indicator. On some sites, the indicator becomes invisible when clicked/dragged. No such problem with FF88.
Examples of a sites where scrollbar indicator is not visible at all: https://bugzilla.mozilla.org/ (yes, this one ), https://slashdot.org/ , https://www.iltalehti.fi/ , https://www.hs.fi/ ,
Example of site where indicator becomes invisible when it is clicked/dragged: https://csdb.dk/
Site that works: https://www.youtube.com/
This issue occurs with completely new FF profile (deleting/renaming $HOME/.mozilla/), so it is not due to extensions or user settings.
System is x86-64 Linux, Debian 11 testing (Bullseye), but using FF build from Mozilla, NOT the Debian package. Intel i7-4770 Haswell integrated HD Graphics 4600, Xorg 1.20.11.
Actual results:
Scrollbar indicator is not visible or becomes invisible, making it difficult to see where in the page I am currently positioned.
Expected results:
I would expect all the sites to work consistently with a visible scrollbar indicator.
Reporter | ||
Comment 1•4 years ago
|
||
Reporter | ||
Comment 2•4 years ago
|
||
Comment 3•4 years ago
|
||
I think this is Linux-specific, I can't reproduce it on MacOS 10.15, moving it over to that component so the devs can check it out. Thanks for all the provided info and examples!
Assignee | ||
Comment 4•4 years ago
|
||
Which gtk theme are you using? We're likely miscomputing the scrollbar thumb color for your specific GTK theme.
Thanks.
Reporter | ||
Comment 5•4 years ago
|
||
Ahh, I am/was using "Vertex Light" theme, and if I switch to Adwaita (for example), it works just fine. Interesting.
It is possible that this theme is not up to date with whatever Gtk changes there have been, latest version I could find was pretty old.
Assignee | ||
Comment 6•4 years ago
|
||
I'll try to poke, thanks! Worst case we should just be falling back to awaita.
Assignee | ||
Comment 7•4 years ago
|
||
I could repro, thank you!
Assignee | ||
Comment 8•4 years ago
|
||
Assignee | ||
Comment 9•4 years ago
|
||
The right fix for this theme in particular would be for WidgetUsesImage
to check "border-image". However, that doesn't work (instead I get a GTK
warning saying that border-image is not gettable).
So instead, make sure that we fallback to unthemed colors if the thumb
would be invisible in any of its states. This is more resilient anyways.
Depends on D116936
Assignee | ||
Comment 10•4 years ago
|
||
Comment on attachment 9225452 [details]
Bug 1714103 - Fallback to unthemed scrollbars if the thumb wouldn't be visible. r=stransky
Beta/Release Uplift Approval Request
- User impact if declined: Unusable scrollbars on some GTK themes.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Very simple fallback to existing code to render unthemed scrollbars.
- String changes made/needed: none
Comment 12•4 years ago
|
||
Updated•4 years ago
|
Comment 13•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/41d077ae5859
https://hg.mozilla.org/mozilla-central/rev/6e583556c5d5
Comment 14•4 years ago
|
||
Comment on attachment 9225452 [details]
Bug 1714103 - Fallback to unthemed scrollbars if the thumb wouldn't be visible. r=stransky
approved for 90.0b6
Comment 15•4 years ago
|
||
bugherder uplift |
Updated•4 years ago
|
Updated•4 years ago
|
Comment 16•4 years ago
|
||
Not fixed. Reproduced on latest nightly build in this bug https://bugzilla.mozilla.org/show_bug.cgi?id=1713920
Comment 17•4 years ago
|
||
Hi Matti and Andrey, does this issue still occur on your end in our latest Beta 90.0b7 and Nightly builds? can you please check with our latest builds and see if the issue is fixed? I tried to reproduce this issue on Ubuntu 18 and the issue does not occur on my end.
You can find the BETA and NIGHTLY builds here :
BETA - firefox-90.0b7.tar.bz2 - 13-Jun-2021 :
https://ftp.mozilla.org/pub/firefox/candidates/90.0b7-candidates/build1/linux-x86_64/en-US/
Comment 18•4 years ago
|
||
Emilio can you please take a look at this issue it seems Andrey can still reproduce it in our latest Nightly build on centOS 7, some Linux Themes are still having some issues in our latest builds.
I was using Adwaita on Ubuntu 18.04 as well as Radiance and Ambiance but I couldnt reproduce the issue.
Assignee | ||
Comment 19•4 years ago
|
||
That's bug 1713920 and I'm looking at that. The issue as reported here (with the "Vertex Light" theme) should be fixed. You can confirm that after installing https://github.com/horst3180/Vertex-theme#installation and changing the theme in the gnome-tweaks
application.
Comment 20•4 years ago
|
||
Comment on attachment 9225452 [details]
Bug 1714103 - Fallback to unthemed scrollbars if the thumb wouldn't be visible. r=stransky
Taking as a ride along to our 89 dot release, thanks.
Comment 21•4 years ago
•
|
||
Thank you Emilio for clearing that up, I was able to install the Vertex Theme and I was able to reproduce this issue in release, I can now confirm that this issue is Verified as fixed in Beta 90.0b6 and our latest Nightly build.
Updated•4 years ago
|
Assignee | ||
Comment 22•4 years ago
|
||
Just a minor indentation change since I removed some useless wrapping condition in 90.
Updated•4 years ago
|
Comment 23•4 years ago
|
||
bugherder uplift |
Comment 24•4 years ago
|
||
This issue is Verified as fixed in 89.0.1 on ubuntu 18.04 with the Vertex light theme enabled.
Description
•