Bug 1714103 - Fallback to unthemed scrollbars if the thumb wouldn't be visible. r=stransky, a=jcristau

The right fix for this theme in particular would be for WidgetUsesImage
to check "border-image". However, that doesn't work (instead I get a GTK
warning saying that border-image is not gettable).

So instead, make sure that we fallback to unthemed colors if the thumb
would be invisible in any of its states. This is more resilient anyways.

Depends on D116936

Differential Revision: https://phabricator.services.mozilla.com/D116937